hard-gists/6094449/run.log
=== Docker Run Log for 6094449 ===
Started at: Mi 29. Okt 16:19:30 CET 2025

[2025-10-29 16:19:30] START: Running container for 6094449
[2025-10-29 16:19:30] SUCCESS: Container 8b8c7769b949537a175739e19a0f5ce4eedc13f8cbca2e1ec3642b3645c9fe12 started for 6094449
=== Container logs for 6094449 ===
  File "/snippet.py", line 64
    print 'estimated data size in memory'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6094449 ===
[2025-10-29 16:19:32] INFO: Container 8b8c7769b949537a175739e19a0f5ce4eedc13f8cbca2e1ec3642b3645c9fe12 has stopped
